--- a/experience.html
+++ b/experience.html
@@ -25,13 +25,13 @@
             <h1 style="color: aliceblue; text-align: justify; font-family:Verdana, Geneva, Tahoma, sans-serif;">Experience</h1>
             <section style="display: inline-block; padding: 10px; border: 10px double white; margin: 20px;background-color: rgba(255, 0, 242, 0.2) ;">
             <div class="job">
-                <h2 style="color: aliceblue; text-align: justify; font-family:Verdana, Geneva, Tahoma, sans-serif;">Professional Experience: Web Application Security Intern</h2>
-                <h3 style="color: aliceblue; text-align: justify; font-family:Verdana, Geneva, Tahoma, sans-serif;">TATA Power Dehi Distribution Limited</h3>
+                <h2 style="color: aliceblue; text-align: justify; font-family:Verdana, Geneva, Tahoma, sans-serif;">Professional Experience </h2>
+                <h3 style="color: aliceblue; text-align: justify; font-family:Verdana, Geneva, Tahoma, sans-serif;">TATA Power Dehi Distribution Limited: Web Application Security Intern</h3>
                 <p style="color: aliceblue;">Jan-Apr 2021</p>
                 <ul>
-                    <li>Completed Vulnerability Assessment and Penetration Testing training, covering topics such as information security, network protocols, OWASP Top 10 (2017) analysis, and hands-on experience through vulnerability labs.</li>
-                    <li>Mastered cybersecurity fundamentals and gained invaluable experience assisting a professional team environment through the comprehensive 13-week training program.</li>
-                    <li>Managed evaluations on diverse operations of web-based attacks with professionals with 10+ years of experience in information security.</li>
+                    <li>Performed an average of 42 vulnerability assessments and penetration tests on simulated web applications.</li>
+                    <li>Utilized tools present in Kali Linux such as OWASP ZAP, Nessus, Metasploit, and Burp Suite, generating comprehensive reports on findings throughout a 13-week training period.</li>
+                    <li>Mastered cybersecurity fundamentals and acquired valuable experience while assisting a professional team with over 10 years of expertise.</li>
                     <li>Conducted 42 vulnerability assessments and prepared comprehensive reports and analyses on findings, including identification and mitigation of vulnerabilities.</li>
                     <li>Implemented firewalls, IDS/IPS, and SIEM tools such as QRadar and Splunk in a simulated environment to protect the company’s web infrastructure, reducing security incidents by 40 %.</li>
                     <li>Executed mitigation techniques to address 42 identified vulnerabilities and remediate offensive scenarios.</li>
