--- a/experience.html
+++ b/experience.html
@@ -26,50 +26,56 @@
             <section style="display: inline-block; padding: 10px; border: 10px double white; margin: 20px;background-color: rgba(255, 0, 242, 0.2) ;">
             <div class="job">
                 <h2 style="color: aliceblue; text-align: justify; font-family:Verdana, Geneva, Tahoma, sans-serif;">Professional Experience </h2>
+                 <h3 style="color: aliceblue; text-align: justify; font-family:Verdana, Geneva, Tahoma, sans-serif;">TATA Power Southern Odisha Distribution Limited: Network Security Intern</h3>
+                <p style="color: aliceblue;">Sep-Dec 2023</p>
+                <ul>
+                    <li>Conducted in-depth research on network protocols and security tools, such as firewalls, SIEM, SOAR, intrusion detection/prevention systems, cloud-based anti-malware, VPNs, endpoint protection, and WLPs during a 12-week internship.</li>
+                    <li>Acquired proficiency in cutting-edge network security technologies, including FortiGate Firewall, Forti Analyser, Ruckus WLP, Trend Micro Deep Security, ArcSight SOC, and Forcepoint Security Manager, resulting in streamlined operations and a 10% increase in overall network security effectiveness, under the guidance of seasoned professionals.</li>
+                    <li>Participated in over 20 demonstrations and interactive sessions focused on managing security policies, ensuring information assurance, and addressing regulatory compliance, contributing to improvement in compliance adherence and a 25% reduction in security policy violations.</li>
+                 </ul>
                 <h3 style="color: aliceblue; text-align: justify; font-family:Verdana, Geneva, Tahoma, sans-serif;">TATA Power Dehi Distribution Limited: Web Application Security Intern</h3>
                 <p style="color: aliceblue;">Jan-Apr 2021</p>
                 <ul>
                     <li>Performed an average of 42 vulnerability assessments and penetration tests on simulated web applications.</li>
                     <li>Utilized tools present in Kali Linux such as OWASP ZAP, Nessus, Metasploit, and Burp Suite, generating comprehensive reports on findings throughout a 13-week training period.</li>
                     <li>Mastered cybersecurity fundamentals and acquired valuable experience while assisting a professional team with over 10 years of expertise.</li>
-                    <li>Conducted 42 vulnerability assessments and prepared comprehensive reports and analyses on findings, including identification and mitigation of vulnerabilities.</li>
-                    <li>Implemented firewalls, IDS/IPS, and SIEM tools such as QRadar and Splunk in a simulated environment to protect the company’s web infrastructure, reducing security incidents by 40 %.</li>
-                    <li>Executed mitigation techniques to address 42 identified vulnerabilities and remediate offensive scenarios.</li>
-                    <li>Demonstrated insights on the latest developments in cybersecurity by delivering 11 presentations covering topics such as cyber threats, attack vectors, and malware analysis.</li>
-                </ul>
+                    <li>Applied risk analyses and mitigation practices, resulting in a 23% improvement in the security of web applications compared to their previous state.</li>
+                    <li>Demonstrated insights into the latest developments in cybersecurity through 11 presentations covering topics such as cyber threats and malware analysis.</li>
+                 </ul>
             </div>
             <div class="job">
                 <h2 style="color: aliceblue; text-align: justify; font-family:Verdana, Geneva, Tahoma, sans-serif;">Projects</h2>
                 <h3 style="color: aliceblue; text-align: justify; font-family:Verdana, Geneva, Tahoma, sans-serif;">Text Monitoring with NLP for Covid Related Data</h3>
                 <ul>
-                    <li>Designed and implemented a Natural Language Processing algorithm for extracting keywords from 100,000 Covid-19 statements.</li> 
-                    <li>Incorporated Python libraries and NLTK to create the text-cleaning mechanisms that resulted in 10 % more efficiency compared to the traditional methods.</li>
-                    <li>The project turned out to be 90% accurate when tested with training models and machine learning algorithms.	Delivered a compelling presentation about the project to a jury panel of 3 esteemed scientists from DRDO, at a highly anticipated university conference, attended by approximately 70 participants.</li>
-                    <li>Delivered a compelling presentation about the project to a jury panel of 3 esteemed scientists from DRDO, at a highly anticipated university conference, attended by approximately 70 participants.</li>
+                    <li>Developed a Natural Language Processing algorithm, utilizing Python libraries and NLTK to extract keywords for monitoring from 100,000 COVID-related statements.</li> 
+                    <li>Illustrated a 5% boost in text cleansing mechanism along with an impressive 90% accuracy when validated with training models and machine learning algorithms.</li>
+                    <li>Gained an opportunity to present my work to a panel of esteemed DRDO scientists at a conference among 70 participants all over the university</li>
                 </ul>
             </div>
             <div class="job">
                 <h3 style="color: aliceblue; text-align: justify; font-family:Verdana, Geneva, Tahoma, sans-serif;">Website Migration</h3>
                 <ul>                                                                                                                                                                                                                                                                                          
-                    <li>Migrated a simulated website running on a virtual machine and hosted on a physical web server to AWS Cloud Services.</li>
-                    <li>Accelerated the performance of the website by 50 % by designing an optimal architecture for the website.</li>
-                    <li>Applied AWS Security features such as AWS IAM, AWS RDS, AWS Network Firewall, AWS Patch Manager, and AWS Security Manager to make the website 90% efficient and secure.</li>                   
+                    <li>Migrated a simulated website running on a virtual machine to AWS Cloud Services while designing an optimal architecture in the process.</li>
+                    <li>Applied AWS Security features such as AWS IAM, AWS RDS, AWS Network Firewall, AWS Patch Manager, and AWS Security Manager which made the website secure accelerated performance by 50 %.</li>                   
                 </ul>
             </div>
             <div class="job">
-                <h2 style="color: aliceblue; text-align: justify; font-family:Verdana, Geneva, Tahoma, sans-serif;">Certifications</h2>
-                <h3 style="color: aliceblue; text-align: justify; font-family:Verdana, Geneva, Tahoma, sans-serif;">Certified Ethical Hacker (CEHv11) – EC Council</h3>
+                <h3 style="color: aliceblue; text-align: justify; font-family:Verdana, Geneva, Tahoma, sans-serif;">Website Development</h3>
                 <ul>                                                                                                                                                                                                                                                                                          
-                    <li> Certified in ethical hacking and basic principles of VAPT such as network scanning, enumeration, malware analysis, SQL injection, social engineering, cloud security, analysis of IDS and honeypots, vulnerability assessment, and cryptography.</li>                   
+                    <li>Crafted a responsive portfolio website to demonstrate early web development skills, showcasing proficiency in HTML and CSS, which helped me gain hands-on experience in front-end design and back-end functionality.</li>                   
                 </ul>
             </div>
             <div class="job">
                 <h2 style="color: aliceblue; text-align: justify; font-family:Verdana, Geneva, Tahoma, sans-serif;">Technical Skills</h2>
                 <ul>                                                                                                                                                                                                                                                                                          
-                    <li>Programming Languages: C, C++, Python, HTML, and MySQL.</li>
-                    <li>Cybersecurity Skills: Linux, Vulnerability Assessment, Penetration Testing, Web Application Security, Cloud Security, Network Security, Steganography, Cryptography, Google Suite Security, SOC Analysis.</li>
-                    <li>Tools: Microsoft Office 365, Wireshark, NMAP, Nessus, Nikto, Burp Suite, ZAP, Metasploit, Social Phish, Slowloris, Beef, VeraCrytpt, DeepSound, AWS Security, Azure Security, QRadar, and Splunk.</li>
-                    <li>Other Skills: Cloud Computing, Machine Learning, Natural Language Processing.</li>                   
+                    <li>Programming Languages: C, C++, Python, HTML, CSS, SQL.</li>
+                    <li>Network Protocols: TCP/IP, FTP, SSH, UDP, DNS, DHCP, HTTP, ARP, ICMP, SMB, SSL.</li>
+                    <li>Operating Systems: Linux, Windows, Raspbian.</li>
+                    <li>Network Security Tools: Wireshark, Nmap, Nikto, Snort, FortiGate, FortiGuard, Ruckus WLP, Splunk, ArcSight ESM, Apex One Anti-Malware Threat Analyzer.</li>  
+                    <li>Web Application Security Tools: Nessus, Beef, Sqlmap, Burp Suite, OWASP ZAP, Metasploit.</li>
+                    <li>Cloud Security Platforms: AWS and Google Cloud Platform.</li>
+                    <li>Machine Learning Skills: Natural Language Processing (NLP), Tokenization, Vectorization, Data Cleansing, Classification Algorithms</li>
+                    <li>Certifications: Certified Ethical Hacker (CEH), G Suite Security, Google Cloud Computing Foundations, Detection and Mitigating Cyber Threats and Attacks.</li>
                 </ul>
             </div>
         </section>    
