--- a/experience.html
+++ b/experience.html
@@ -26,14 +26,14 @@
             <section style="display: inline-block; padding: 10px; border: 10px double white; margin: 20px;background-color: rgba(255, 0, 242, 0.2) ;">
             <div class="job">
                 <h2 style="color: aliceblue; text-align: justify; font-family:Verdana, Geneva, Tahoma, sans-serif;">Professional Experience </h2>
-                 <h3 style="color: aliceblue; text-align: justify; font-family:Verdana, Geneva, Tahoma, sans-serif;">TATA Power Southern Odisha Distribution Limited: Network Security Intern</h3>
+                 <h3 style="color: aliceblue; text-align: justify; font-family:Verdana, Geneva, Tahoma, sans-serif;">Network Security Intern: TATA Power Southern Odisha Distribution Limited</h3>
                 <p style="color: aliceblue;">Sep-Dec 2023</p>
                 <ul>
                     <li>Conducted in-depth research on network protocols and security tools, such as firewalls, SIEM, SOAR, intrusion detection/prevention systems, cloud-based anti-malware, VPNs, endpoint protection, and WLPs during a 12-week internship.</li>
                     <li>Acquired proficiency in cutting-edge network security technologies, including FortiGate Firewall, Forti Analyser, Ruckus WLP, Trend Micro Deep Security, ArcSight SOC, and Forcepoint Security Manager, resulting in streamlined operations and a 10% increase in overall network security effectiveness, under the guidance of seasoned professionals.</li>
                     <li>Participated in over 20 demonstrations and interactive sessions focused on managing security policies, ensuring information assurance, and addressing regulatory compliance, contributing to improvement in compliance adherence and a 25% reduction in security policy violations.</li>
                  </ul>
-                <h3 style="color: aliceblue; text-align: justify; font-family:Verdana, Geneva, Tahoma, sans-serif;">TATA Power Dehi Distribution Limited: Web Application Security Intern</h3>
+                <h3 style="color: aliceblue; text-align: justify; font-family:Verdana, Geneva, Tahoma, sans-serif;">: Network Security Intern: TATA Power Delhi Distribution Limited</h3>
                 <p style="color: aliceblue;">Jan-Apr 2021</p>
                 <ul>
                     <li>Performed an average of 42 vulnerability assessments and penetration tests on simulated web applications.</li>
