--- a/about.html
+++ b/about.html
@@ -69,11 +69,15 @@
                 <section style="display: inline-block; border: 10px double white; align-self:center;" >
                     <div class="container">
                       <p style ="text-align: justify; color: aliceblue;margin-left: 60px; margin-right: 10%; font-family: Verdana, Geneva, Tahoma, sans-serif;";> 
-                       I am a highly motivated aspiring cybersecurity professional pursuing an M.Eng at the University of Maryland. My internships at TPSODL and TPDDL provided hands-on experience
-                       in network and web application security, including vulnerability assessments, penetration testing, and cloud security. I'm proficient in various security tools and concepts, 
-                       along with programming languages that empower me to tackle complex challenges.My certifications in CEH, G-Suite Security, and Google Cloud Computing Foundations demonstrate my 
-                       commitment to continuous learning and staying ahead of the curve.
-                        </p>
+                          I am a highly motivated aspiring cybersecurity professional driven to excel in the ever-evolving field. Currently, I am pursuing an M.Eng degree in Cybersecurity at the University of Maryland, 
+                          further solidifying my technical foundation.My passion for security was ignited through practical experience gained during internships at TPSODL and TPDDL. 
+                          There, I actively participated in network and web application security tasks, honing my skills in vulnerability assessments, penetration testing, and cloud security. 
+                          Beyond these core areas, I have cultivated a diverse skillset encompassing various security tools and concepts – from industry standards like OWASP Top 10 and NIST 
+                          to practical applications like Wireshark and Metasploit.My proficiency in programming languages like Python and C++ strengthens my ability to tackle complex security challenges.  
+                          Furthermore, my commitment to continuous learning is evident through certifications like Certified Ethical Hacker (CEH), G-Suite Security, and Google Cloud Computing Foundations.  
+                          I am eager to leverage this blend of academic rigor, practical experience, and ongoing learning to contribute meaningfully to the ever-growing need for cybersecurity expertise.
+
+                     </p>
                     </div>
                 </section>
             </div>
